--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,85 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#header{
+  position: relative;
+  width: 100%;
+  height: 7rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+#websiteName{
+  position: absolute;
+  left: 3rem;
+  margin: 2rem 0 0 0;
+  font-size: 3rem;
+  font-weight: 700;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#searchbar{
+  position: absolute;
+  right: 3rem;
+  width: 21.5rem;
+  height: 2.5rem;
+  margin: 2rem 0 0 0;
+  border-radius: 3rem;
+  border: none;
+  background-color: #f3f3f3;
+  padding: 0 1rem 0 1rem;
+}
+
+#searchbar:focus{
+  outline: none;
+  background-color: #ececec;
+}
+
+#hero{
+  width: 100%;
+  display: flex;
+}
+
+#categories{
+  width: 15rem;
+  height: 25rem;
+  background-color: bisque;
+  margin: 3rem;
+}
+
+#sidebarFooter{
+  width: 15rem;
+  height: 5rem;
+  background-color: burlywood;
+  margin: 0 3rem 0 3rem;
+}
+
+#heroMain{
+  width: 100%;
+  height: 25rem;
+  margin: 3rem 3rem 3rem 0;
+  background-color: aqua;
+}
+
+.heroMainHeader{
+  display: flex;
+}
+
+#carouselContainer{
+  width: 70%;
+  height: 25rem;
+  background-color: blue;
+}
+
+#trending{
+  width: 30%;
+  height: 25rem;
+  background-color: blueviolet;
+}
+
+#trendingArticles{
+  width: 100%;
+  height: 20rem;
+  background-color: cadetblue;
+  margin: 3rem 3rem 3rem 0;
 }
