--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+ul{
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
 }
@@ -31,14 +36,19 @@
   padding: 0 1rem 0 1rem;
 }
 
+#searchbar:hover{
+  box-shadow: 0px 0px 5px 2px #e0e0e0;
+}
+
 #searchbar:focus{
   outline: none;
-  background-color: #ececec;
+  background-color: #eaeaea;
 }
 
 #hero{
   width: 100%;
   display: flex;
+  margin: 3rem 0 0 0;
 }
 
 #categories{
@@ -59,11 +69,6 @@
   width: 100%;
   height: 25rem;
   margin: 3rem 3rem 3rem 0;
-  background-color: aqua;
-}
-
-.heroMainHeader{
-  display: flex;
 }
 
 #carouselContainer{
@@ -75,7 +80,6 @@
 #trending{
   width: 30%;
   height: 25rem;
-  background-color: blueviolet;
 }
 
 #trendingArticles{
@@ -83,4 +87,37 @@
   height: 20rem;
   background-color: cadetblue;
   margin: 3rem 3rem 3rem 0;
+}
+
+.heroMainHeader{
+  display: flex;
+}
+
+.trending-list{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.trending-topic-one{
+  list-style: none;
+  width: 90%;
+  height: 7rem;
+  border-radius: 1rem;
+  margin: 0;
+  background-color: #f3f3f3;
+  text-align: left;
+}
+
+.trending-topic-item{
+  list-style: none;
+  width: 90%;
+  height: 4rem;
+  border-radius: 1rem;
+  margin: 0.2rem 0 0 0;
+  background-color: #f3f3f3;
+  text-align: left;
 }
