--- a/src/App.css
+++ b/src/App.css
@@ -82,11 +82,16 @@ ul{
   height: 25rem;
 }
 
-#trendingArticles{
+#topArticles{
   width: 100%;
-  height: 20rem;
-  background-color: cadetblue;
   margin: 3rem 3rem 3rem 0;
+}
+
+#top-articles-box{
+  width: 50rem;
+  height: 20rem;
+  background-color: #f3f3f3;
+  border-radius: 1rem;
 }
 
 .heroMainHeader{
