--- a/src/App.css
+++ b/src/App.css
@@ -7,15 +7,6 @@ ul{
   text-align: center;
 }
 
-#header{
-  position: relative;
-  width: 100%;
-  height: 7rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 #websiteName{
   position: absolute;
   left: 3rem;
@@ -24,37 +15,19 @@ ul{
   font-weight: 700;
 }
 
-#searchbar{
-  position: absolute;
-  right: 3rem;
-  width: 21.5rem;
-  height: 2.5rem;
-  margin: 2rem 0 0 0;
-  border-radius: 3rem;
-  border: none;
-  background-color: #f3f3f3;
-  padding: 0 1rem 0 1rem;
-}
-
-#searchbar:hover{
-  box-shadow: 0px 0px 5px 2px #e0e0e0;
-}
-
-#searchbar:focus{
-  outline: none;
-  background-color: #eaeaea;
-}
-
 #hero{
   width: 100%;
   display: flex;
   margin: 3rem 0 0 0;
 }
 
+#categoriesSidebar{
+  position: fixed;
+}
+
 #categories{
   width: 15rem;
   height: 25rem;
-  background-color: bisque;
   margin: 3rem;
 }
 
@@ -68,7 +41,7 @@ ul{
 #heroMain{
   width: 100%;
   height: 25rem;
-  margin: 3rem 3rem 3rem 0;
+  margin: 3rem 3rem 3rem 20rem;
 }
 
 #carouselContainer{
@@ -84,7 +57,7 @@ ul{
 
 #topArticles{
   width: 100%;
-  margin: 3rem 3rem 3rem 0;
+  margin: 3rem 3rem 3rem 0.5rem;
 }
 
 #top-articles-box{
